# BTC-analysis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  README.md  pyproject.toml
backtest/: __init__.py  config.py  costs.py  engine.py  metrics.py  optimization.py  plotting.py  strategy.py  walk_forward.py
config/: btcusdt.example.yaml
core/: __init__.py  logging.py  settings.py
data/: __init__.py  client.py  db.py  download.py  quality.py  schemas.py  storage.py  stream.py
features/: __init__.py  config.py  microstructure.py  pipeline.py  regime.py  technical.py  volatility.py
live/: __init__.py  alerts.py  scoring.py  telegram.py  tracker.py
notebooks/: README.md
scripts/: run_alerts.py  run_baseline_backtest.py  smoke_e2e.py
scripts/deploy/: com.btc-quant.alerts.plist.template  install_macos.sh  uninstall_macos.sh
signals/: __init__.py  mean_reversion.py  sizing.py  trend_breakout.py
tests/: conftest.py  test_bootstrap.py
tests/backtest/: conftest.py  test_costs.py  test_engine.py  test_metrics.py  test_optimization.py  test_walk_forward.py
tests/data/: conftest.py  test_db.py  test_download.py  test_quality.py  test_schemas.py  test_storage.py  test_stream.py
tests/features/: conftest.py  test_causality.py  test_microstructure.py  test_pipeline.py  test_regime.py  test_technical.py  test_volatility.py
tests/live/: test_alerts.py  test_scoring.py  test_telegram.py  test_tracker.py
tests/signals/: test_mean_reversion.py  test_trend_breakout.py
